# spi-ram-emu

./: CMakeLists.txt  LICENSE  README.md  logic.c  logic.h  main.c  main.cpp  msc_disk.c  pio_spi.c  pio_spi.h  spi.pio  sram.c  sram.h  sram.pio  sram_memmap.ld
